--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,7 +4,7 @@
 name: iOS starter workflow
 on:
   pull_request:
-    branches: [ “**” ]
+    branches: [ "**" ]
 jobs:
   build:
     name: Build and Test default scheme using any available iPhone simulator
