--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,3 +14,7 @@ jobs:
 
       - name: Set Xcode version
         run: sudo xcode-select -s /Applications/Xcode_16.0.app
+
+      - name: Run package tests
+        working-directory: BudgetBookPackage
+        run: swift test
