GithubActionsのbuildコマンドを修正

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,9 +16,7 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_16.4.app
 
       - name: Build iOS App
-        run: xcodebuild -project BudgetBook.xcodeproj \
-                        -scheme BudgetBook \
-                        -sdk iphonesimulator
+        run: swift build
 
       - name: Run package tests
         working-directory: BudgetBookPackage
