--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,6 +16,7 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_16.4.app
 
       - name: Build iOS App
+        working-directory: BudgetBookPackage
         run: swift build
 
       - name: Run package tests
