--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,8 +17,16 @@ jobs:
 
       - name: Build iOS App
         working-directory: BudgetBookPackage
-        run: swift build
+        run: xcodebuild
+              -scheme BudgetBook
+              -sdk iphonesimulator
+              build
 
       - name: Run package tests
         working-directory: BudgetBookPackage
-        run: swift test
+        run: xcodebuild
+              -scheme BudgetBook
+              -sdk iphonesimulator
+              -destination 'platform=iOS Simulator,name=iPhone 15'
+              clean test
+              
