--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -8,23 +8,27 @@ jobs:
   build:
     name: Build and Test default scheme using any available iPhone simulator
     runs-on: macos-15
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_16.4.app
+      - name: Set up Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: "16.4"
 
       - name: Build iOS App
-        run: xcodebuild
-              -scheme BudgetBook
-              -sdk iphonesimulator
-              build
+        run: |
+          xcodebuild \
+            -scheme BudgetBook \
+            -sdk iphonesimulator \
+            build
 
       - name: Run package tests
-        run: xcodebuild
-              -scheme BudgetBook
-              -sdk iphonesimulator
-              -destination 'platform=iOS Simulator,name=iPhone 15'
-              clean test
-              
+        run: |
+          xcodebuild \
+            -scheme BudgetBook \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 15' \
+            clean test
