--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -25,6 +25,7 @@ jobs:
             -scheme CoreTests \
             -sdk iphonesimulator \
             -destination 'platform=iOS Simulator,name=iPhone 17' \
+            -skipMacroValidation
 
       - name: Run HomeFeatureTests
         run: |
@@ -33,6 +34,7 @@ jobs:
             -scheme HomeFeatureTests \
             -sdk iphonesimulator \
             -destination 'platform=iOS Simulator,name=iPhone 17' \
+            -skipMacroValidation
 
       - name: Run AppFeatureTests
         run: |
@@ -41,6 +43,7 @@ jobs:
             -scheme AppFeatureTests \
             -sdk iphonesimulator \
             -destination 'platform=iOS Simulator,name=iPhone 17' \
+            -skipMacroValidation
 
       - name: Run IncomeFeatureTests
         run: |
@@ -49,3 +52,4 @@ jobs:
             -scheme IncomeFeatureTests \
             -sdk iphonesimulator \
             -destination 'platform=iOS Simulator,name=iPhone 17' \
+            -skipMacroValidation
