--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -5,8 +5,8 @@ on:
     branches: [ "**" ]
 
 jobs:
-  build:
-    name: Build and Test default scheme using any available iPhone simulator
+  test:
+    name: test default scheme using any available iPhone simulator
     runs-on: macos-15
 
     steps:
@@ -17,6 +17,14 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "16.4"
+          
+      - name: Cache Swift Packages
+        uses: actions/cache@v4
+        with:
+          path: SourcePackages
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
 
       - name: Run CoreTests
         run: |
