--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -6,76 +6,16 @@ on:
 
 jobs:
   test:
-    name: test default scheme using any available iPhone simulator
+    name: Test default scheme using any available iPhone simulator
     runs-on: macos-15
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cache Swift Packages
-        uses: actions/cache@v4
-        with:
-          path: SourcePackages
-          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}-v2
-          restore-keys: |
-            ${{ runner.os }}-spm-
+      - name: Set Xcode version
+        run: sudo xcode-select -s /Applications/Xcode_16.4.app
 
-      - name: Set up Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: "16.4"
-
-      - name: Clean DerivedData
-        run: rm -rf ~/Library/Developer/Xcode/DerivedData
-
-      - name: Resolve Package Dependencies
-        run: |
-          xcodebuild -resolvePackageDependencies \
-            -project BudgetBook.xcodeproj \
-            -scheme CoreTests \
-            -clonedSourcePackagesDirPath SourcePackages
-
-      - name: Run CoreTests
-        run: |
-          xcodebuild test \
-            -project BudgetBook.xcodeproj \
-            -scheme CoreTests \
-            -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 16' \
-            -skipMacroValidation \
-            -clonedSourcePackagesDirPath SourcePackages \
-            OTHER_SWIFT_FLAGS="$(inherited) -Xfrontend -disable-sandbox"
-
-      - name: Run HomeFeatureTests
-        run: |
-          xcodebuild test \
-            -project BudgetBook.xcodeproj \
-            -scheme HomeFeatureTests \
-            -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 16' \
-            -skipMacroValidation \
-            -clonedSourcePackagesDirPath SourcePackages \
-            OTHER_SWIFT_FLAGS="$(inherited) -Xfrontend -disable-sandbox"
-
-      - name: Run AppFeatureTests
-        run: |
-          xcodebuild test \
-            -project BudgetBook.xcodeproj \
-            -scheme AppFeatureTests \
-            -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 16' \
-            -skipMacroValidation \
-            -clonedSourcePackagesDirPath SourcePackages \
-            OTHER_SWIFT_FLAGS="$(inherited) -Xfrontend -disable-sandbox"
-
-      - name: Run IncomeFeatureTests
-        run: |
-          xcodebuild test \
-            -project BudgetBook.xcodeproj \
-            -scheme IncomeFeatureTests \
-            -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 16' \
-            -skipMacroValidation \
-            -clonedSourcePackagesDirPath SourcePackages \
-            OTHER_SWIFT_FLAGS="$(inherited) -Xfrontend -disable-sandbox"
+    　- name: Run package tests
+        working-directory: BudgetBookPackage
+        run: swift test
