口座と収入源を設定できるようにした

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -69,6 +69,10 @@ opt_in_rules:
   - vertical_parameter_alignment_on_call
   - vertical_whitespace_between_cases
   - yoda_condition
+  
+# Disabled rules
+disabled_rules:
+  - multiple_closures_with_trailing_closure
 
 # Rule configurations
 analyzer_rules:
